started form, just changed root letter spacing and need to fix rest of cards

--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body{
     font-size: 18px;
     font-weight: 500;
     font-family: 'Space Grotesk', sans-serif;
+    letter-spacing: 1px;
     margin: 0px;
+    background-color: var(--white);
 }
 
 #card-container{
@@ -103,11 +105,29 @@ body{
 }
 
 #card-image-section{
-    height: 400px;
+    height: 240px;
     background: url("./images/bg-main-mobile.png") no-repeat;
     overflow: visible;
 
+    margin-bottom: 47px; /*to avoid stuff overlapping the card*/
 
+}
 
+#payment-form{
+    margin: 90px 32px auto 25px;
+    box-sizing: border-box;
+    display: block
+}
+
+#payment-form label{
+    text-transform: uppercase;
+    font-size: 0.8em;
+}
+
+#payment-form input{
+    width: 100%;
+    height: 39px;
+    border-radius: 6px;
+    border: 1px solid --darkGrayishViolet;
 }
 
